# rust_azure_email_communication

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  run.sh
src/: acs_email.rs  email.rs  email_status.rs  main.rs  models.rs  send_email.rs  utils.rs
src/adapters/: mod.rs
src/adapters/gateways/: acs_email.rs  acs_shared_key.rs  mod.rs
src/domain/entities/: models.rs
