[package]
name = "azure_email_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0" , features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.2" , features = ["v4","fast-rng","macro-diagnostics"]}
httpdate = "1.0"
base64 = "0.13"
url = "2.3"
substring = "1.4.5"
