[package]
name = "azure_email_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" , features = ["derive"] }
pretty_env_logger = "0.5"
dotenv = "0.15"
log = "0.4"
serde = { version = "1.0" , features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json","rustls-tls"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.2" , features = ["v4","fast-rng","macro-diagnostics"]}
httpdate = "1.0"
base64 = "0.22"
url = "2.3"
substring = "1.4.5"
lettre = { version = "0.11" ,default-features = false, features = ["builder","hostname","rustls-tls","pool","smtp-transport"]}

azure_core = {version = "0.21"}
azure_identity = {version = "0.21",default-features = false, features = ["development",
    "tz-rs",
    "enable_reqwest_rustls"]}


openssl = {version = "0.10", features = ["vendored"]}

[profile.release]
lto = true
opt-level = "z"
strip = true
